위플즈 반응형 작업 완료

--- a/html/client/signup.html
+++ b/html/client/signup.html
@@ -38,8 +38,8 @@
 	</dl>
 
 	<header>
-		<div class="container">
-			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
+		<div class="inner-wrap">
+			<span class="logo-wrap"><a href="../index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
@@ -69,46 +69,50 @@
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
-				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
+				<a href="javascript:void(0);"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
 					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
 					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fast fadeInDown">
+					<div>
+						<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="../member/signin.html">로그인</a></li>
-						<li class="join">
+							<li><a href="../member/signin.html">로그인</a></li>
+							<li class="join">
+								<ul>
+									<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+									<li><a href="../client/signup.html">기업회원 가입</a></li>
+								</ul>
+							</li>
+							<!-- 로그인 후 
+							<li><a href="javascript:void(0);">로그아웃</a></li>
+							<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+							-->
+						</ul>
+						<div class="category animate fast fadeInDown">
 							<ul>
-								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
-								<li><a href="../client/signup.html">기업회원 가입</a></li>
+								<li><a href="../project/search.html">프로젝트 검색</a></li>
+								<li><a href="../project/create.html">프로젝트 등록</a></li>
+								<li><a href="../partner/create.html">프리랜서 등록</a></li>
+								<li>
+									<a href="../introduce/we_people.html">위플즈 소개</a>
+									<ul class="depth2">
+										<li><a href="../introduce/we_people.html">We:People</a></li>
+										<li><a href="../introduce/we_project.html">We:Project</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="../community/list.html">커뮤니티</a>
+									<ul class="depth2">
+										<li><a href="../community/inquiry.html">1:1문의</a></li>
+										<li><a href="../community/faq.html">FAQ</a></li>
+										<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
+									</ul>
+								</li>
 							</ul>
-						</li>
-						<!-- 로그인 후 
-						<li><a href="javascript:void(0);">로그아웃</a></li>
-						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
-						-->
-					</ul>
-					<ul class="category animate fast fadeInDown">
-							<li><a href="../project/search.html">프로젝트 검색</a></li>
-							<li><a href="../project/create.html">프로젝트 등록</a></li>
-							<li><a href="../partner/create.html">프리랜서 등록</a></li>
-							<li>
-								<a href="../introduce/we_people.html">위플즈 소개</a>
-								<ul class="depth2">
-									<li><a href="../introduce/we_people.html">We:People</a></li>
-									<li><a href="../introduce/we_project.html">We:Project</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="../community/list.html">커뮤니티</a>
-								<ul class="depth2">
-									<li><a href="../community/inquiry.html">1:1문의</a></li>
-									<li><a href="../community/faq.html">FAQ</a></li>
-									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
-								</ul>
-							</li>
-						</ul>	
+						</div>
+					</div>	
 				</div>
 			</nav>	
 		</div>
@@ -118,15 +122,15 @@
 		<h1 class="hidden-txt">기업회원가입</h1>
 		<div class="sub-top-wrap">
 			<h2 class="heading-wrap-02 long-txt">
-				위플즈 기업회원이 되시면 다양한 기업지원 서비스를 받으실 수 있습니다<br/>
+				위플즈 기업회원이 되시면<br class="mob-only" /> 다양한 기업지원 서비스를 받으실 수 있습니다<br/>
 				<span>위플스는 성공적인 프로젝트를 위해 교육훈련지원, 제안서작성 및 프로젝트 전 단계 업무를 지원합니다</span>
 			</h2>
 		</div>
 		<div class="fixed-wrap inner">
 			<div class="form-inline">
 				<ul class="col-2">
-					<li class="service"><a href="../introduce/we_project.html"><em>We:Project 기업 서비스</em></a></li>
-					<li class="training"><a href="#"><em>맞춤형 교육훈련 요청</em></a></li>
+					<li class="service"><a href="../introduce/we_project.html"><em class="txt-rendering">We:Project<br class="mob-only" /> 기업 서비스</em></a></li>
+					<li class="training"><a href="#"><em class="txt-rendering">맞춤형<br class="mob-only" /> 교육훈련 요청</em></a></li>
 				</ul>	
 			</div>	
 		</div>	
@@ -163,15 +167,15 @@
 					  		</dl>
 					  	</div>	
 					  </div>
-					  <div class="chk-wrap align-c">
-					  	<em class="txt-rendering">회원서비스 이용을 위한 이용약관에 동의하시겠습니까?</em>
+					  <div class="chk-wrap">
+					  	<em class="txt-rendering">회원서비스 이용을 위한 이용약관에 동의하시겠습니까?</em><br class="mob-only" />
 							<span>
 								<input id="dev_01" type="checkbox">
 								<label for="dev_01"><em class="txt-rendering">동의하기</em></label>
 							</span>
 						</div>
 					</div>
-					<div class="btn-wrap align-c">
+					<div class="btn-wrap align-c col-mid-2-2">
 						<button type="button" class="btn-type-lg purple"><em class="txt-rendering ft-md">기업인증 확인하기</em></button>
 						<button type="button" class="btn-type-mid"><em class="txt-rendering ft-md">취소</em></button>
 					</div>
