--- a/html/community/list.html
+++ b/html/community/list.html
@@ -11,11 +11,13 @@
 
 	<script src="../static/js/jquery-3.6.0.min.js"></script>
 	<script src="../static/js/jquery-ui.min.js"></script>
+	<script src="../static/js/swiper.min.js"></script>
 	<script src="../static/js/gsap.min.js"></script>
 	<script defer="defer" src="../static/js/common.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../static/css/base.css"> <!-- reset -->
 	<link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.min.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<link rel="stylesheet" media="all and (max-width:1680px)" type="text/css" href="../static/css/style_m.css">
 </head>
@@ -34,13 +36,12 @@
 	<dl id="skipNavigation">
 		<dt class="hidden-txt">바로가기 및 건너띄기 링크</dt>
 		<dd><a href="#h-menu"><em>주 메뉴 바로가기</em></a></dd>
-		<dd><a href="#side-menu"><em>사이드 메뉴 바로가기</em></a></dd>
 		<dd><a href="#contents"><em>본문으로 바로가기</em></a></dd>
 	</dl>
 
 	<header>
-		<div class="container">
-			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
+		<div class="inner-wrap">
+			<span class="logo-wrap"><a href="../index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
@@ -70,46 +71,50 @@
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
-				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
+				<a href="javascript:void(0);"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
 					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
 					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fast fadeInDown">
+					<div>
+						<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="../member/signin.html">로그인</a></li>
-						<li class="join">
+							<li><a href="../member/signin.html">로그인</a></li>
+							<li class="join">
+								<ul>
+									<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+									<li><a href="../client/signup.html">기업회원 가입</a></li>
+								</ul>
+							</li>
+							<!-- 로그인 후 
+							<li><a href="javascript:void(0);">로그아웃</a></li>
+							<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+							-->
+						</ul>
+						<div class="category animate fast fadeInDown">
 							<ul>
-								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
-								<li><a href="../client/signup.html">기업회원 가입</a></li>
+								<li><a href="../project/search.html">프로젝트 검색</a></li>
+								<li><a href="../project/create.html">프로젝트 등록</a></li>
+								<li><a href="../partner/create.html">프리랜서 등록</a></li>
+								<li>
+									<a href="../introduce/we_people.html">위플즈 소개</a>
+									<ul class="depth2">
+										<li><a href="../introduce/we_people.html">We:People</a></li>
+										<li><a href="../introduce/we_project.html">We:Project</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="../community/list.html">커뮤니티</a>
+									<ul class="depth2">
+										<li><a href="../community/inquiry.html">1:1문의</a></li>
+										<li><a href="../community/faq.html">FAQ</a></li>
+										<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
+									</ul>
+								</li>
 							</ul>
-						</li>
-						<!-- 로그인 후 
-						<li><a href="javascript:void(0);">로그아웃</a></li>
-						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
-						-->
-					</ul>
-					<ul class="category animate fast fadeInDown">
-							<li><a href="../project/search.html">프로젝트 검색</a></li>
-							<li><a href="../project/create.html">프로젝트 등록</a></li>
-							<li><a href="../partner/create.html">프리랜서 등록</a></li>
-							<li>
-								<a href="../introduce/we_people.html">위플즈 소개</a>
-								<ul class="depth2">
-									<li><a href="../introduce/we_people.html">We:People</a></li>
-									<li><a href="../introduce/we_project.html">We:Project</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="../community/list.html">커뮤니티</a>
-								<ul class="depth2">
-									<li><a href="../community/inquiry.html">1:1문의</a></li>
-									<li><a href="../community/faq.html">FAQ</a></li>
-									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
-								</ul>
-							</li>
-						</ul>	
+						</div>
+					</div>	
 				</div>
 			</nav>	
 		</div>
@@ -120,7 +125,7 @@
 		<div class="sub-top-wrap">
 			<h2 class="heading-wrap-02">
 				Weple's Community<br/>
-				<span>위플즈 회원이 되시면 누구나 커뮤니티를 이용하실 수 있습니다</span>
+				<span>위플즈 회원이 되시면<br class="mob-only" /> 누구나 커뮤니티를 이용하실 수 있습니다</span>
 			</h2>
 		</div>
 		<div class="fixed-wrap inner">
@@ -144,20 +149,24 @@
 				<span><button type="button" class="btn-type-icon2 search darkPurple"><em class="hidden-txt">검색</em></button></span>
 			</div>	
 		</div>	
-		<div class="contents-wrap visible inner">
+		<div class="contents-wrap inner">
 			<div class="contents" id="contents">
-				<div class="contents-head tab-menu">
-					<ul>
-						<li class="selected"><a href="#">전체</a></li>
-						<li><a href="#">구인&#47;구직</a></li>
-						<li><a href="#">개발자모임</a></li>
-						<li><a href="#">디자이너모임</a></li>
-						<li><a href="#">퍼블리셔모임</a></li>
-						<li><a href="#">기획자모임</a></li>
-						<li><a href="#">PM모임</a></li>
-						<li><a href="#">자유게시판</a></li>
-					</ul>
-					<div class="btn-wrap-inline regist"><button class="btn-type-sm purple"><em class="txt-rendering">글등록</em></button></div>
+				<div class="contents-head tab-menu menu-swiper">
+					<div class="swiper-container">
+						<ul class="swiper-wrapper">
+							<li class="selected swiper-slide"><a href="#">전체</a></li>
+							<li class="swiper-slide"><a href="#">구인&#47;구직</a></li>
+							<li class="swiper-slide"><a href="#">개발자모임</a></li>
+							<li class="swiper-slide"><a href="#">디자이너모임</a></li>
+							<li class="swiper-slide"><a href="#">퍼블리셔모임</a></li>
+							<li class="swiper-slide"><a href="#">기획자모임</a></li>
+							<li class="swiper-slide"><a href="#">PM모임</a></li>
+							<li class="swiper-slide"><a href="#">자유게시판</a></li>
+						</ul>
+					</div>
+					<div class="btn-wrap-inline regist">
+						<button type="button" class="btn-type-sm purple"><em class="txt-rendering">글등록</em></button>
+					</div>
 				</div><!-- // contents-head -->
 
 				<div class="contents-body">
@@ -166,8 +175,8 @@
 							<caption>커뮤니티 리스트</caption>
 							<colgroup>
 								<col style="width:auto;"/>
-								<col style="width:10%;"/>
-								<col style="width:14%;"/>
+								<col style="width:110px;"/>
+								<col style="width:150px;"/>
 							</colgroup>
 							<thead class="hidden-txt">
 								<tr>
@@ -178,32 +187,50 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td class="align-l"><b class="txt-ellipsis"><a href="../community/view.html">위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~</a></b></td>
+									<td class="align-l">
+										<b><a href="../community/view.html">위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~위플즈 오픈 축하합니다. 너무 좋네요~~~</a></b><br class="mob-only" />
+										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
+									</td>
 									<td><span>songc</span></td>
 									<td><span>2021-12-06</span></td>
 								</tr>
 								<tr>
-									<td class="align-l"><b class="txt-ellipsis"><a href="../community/view.html">아티스트의 갬성이란 참으로 어렵습니다</a></b></td>
+									<td class="align-l">
+										<b><a href="../community/view.html">아티스트의 갬성이란 참으로 어렵습니다</a></b><br class="mob-only" />
+										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
+									</td>
 									<td><span>songc</span></td>
 									<td><span>2021-12-06</span></td>
 								</tr>
 								<tr>
-									<td class="align-l"><b class="txt-ellipsis"><a href="../community/view.html">1인 외주기업 차리려면..아무것도 몰라서 그러는데 답변 좀 부탁드립니다</a></b></td>
+									<td class="align-l">
+										<b><a href="../community/view.html">1인 외주기업 차리려면..아무것도 몰라서 그러는데 답변 좀 부탁드립니다</a></b><br class="mob-only" />
+										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
+									</td>
 									<td><span>songc</span></td>
 									<td><span>2021-12-06</span></td>
 								</tr>
 								<tr>
-									<td class="align-l"><b class="txt-ellipsis"><a href="../community/view.html">위플즈 오픈 축하합니다. 너무 좋네요~~~</a></b></td>
+									<td class="align-l">
+										<b><a href="../community/view.html">위플즈 오픈 축하합니다. 너무 좋네요~~~</a></b><br class="mob-only" />
+										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
+									</td>
 									<td><span>songc</span></td>
 									<td><span>2021-12-06</span></td>
 								</tr>
 								<tr>
-									<td class="align-l"><b class="txt-ellipsis"><a href="../community/view.html">아티스트의 갬성이란 참으로 어렵습니다</a></b></td>
+									<td class="align-l">
+										<b><a href="../community/view.html">아티스트의 갬성이란 참으로 어렵습니다</a></b><br class="mob-only" />
+										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
+									</td>
 									<td><span>songc</span></td>
 									<td><span>2021-12-06</span></td>
 								</tr>
 								<tr>
-									<td class="align-l"><b class="txt-ellipsis"><a href="../community/view.html">1인 외주기업 차리려면..아무것도 몰라서 그러는데 답변 좀 부탁드립니다</a></b></td>
+									<td class="align-l">
+										<b><a href="../community/view.html">1인 외주기업 차리려면..아무것도 몰라서 그러는데 답변 좀 부탁드립니다</a></b><br class="mob-only" />
+										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
+									</td>
 									<td><span>songc</span></td>
 									<td><span>2021-12-06</span></td>
 								</tr>
@@ -226,10 +253,10 @@
 						<a href="#" class="next"><span>다음 페이지</span></a>
 						<a href="#" class="last"><span>마지막 페이지</span></a>
 					</div>
-					<div class="btn-wrap-inline regist"><button class="btn-type-sm purple"><em class="txt-rendering">글등록</em></button></div>
-					<div class="btn-wrap mob-only">
-						<button type="button" class="btn-type-wide"><em>더보기</em></button>
+					<div class="btn-wrap align-c mob-only">
+						<button type="button" class="btn-type-lg more"><em class="ft-md txt-rendering">더보기</em></button>
 					</div>
+					<div class="btn-wrap-inline regist"><button class="btn-type-sm purple"><em class="txt-rendering">글등록</em></button></div>
 
 				</div><!-- // contents-body -->
 
@@ -260,5 +287,11 @@
 			<p class="copy"><span>&copy; 2022 Wipplz Corp.</span></p>
 		</div>
 	</footer><!-- // footer -->
+
+	<script>
+		$(function(){
+			commonFunction().tabSwiper();
+		});
+	</script>
 </body>
 </html>
