--- a/html/project/detail.html
+++ b/html/project/detail.html
@@ -38,13 +38,13 @@
 	</dl>
 
 	<header>
-		<div class="container">
-			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
+		<div class="inner-wrap">
+			<span class="logo-wrap"><a href="../index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
 						<li><a href="../partner/create.html">프리랜서 등록</a></li>
-						<li><a href="../project/create.html" class="selected">프로젝트 등록</a></li>
+						<li><a href="../project/create.html">프로젝트 등록</a></li>
 						<li><a href="../project/search.html" class="search">프로젝트 검색</a></li>
 					</ul>
 				</div>
@@ -69,46 +69,50 @@
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
-				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
+				<a href="javascript:void(0);"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
 					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
 					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fast fadeInDown">
+					<div>
+						<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="../member/signin.html">로그인</a></li>
-						<li class="join">
+							<li><a href="../member/signin.html">로그인</a></li>
+							<li class="join">
+								<ul>
+									<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+									<li><a href="../client/signup.html">기업회원 가입</a></li>
+								</ul>
+							</li>
+							<!-- 로그인 후 
+							<li><a href="javascript:void(0);">로그아웃</a></li>
+							<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+							-->
+						</ul>
+						<div class="category animate fast fadeInDown">
 							<ul>
-								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
-								<li><a href="../client/signup.html">기업회원 가입</a></li>
+								<li><a href="../project/search.html">프로젝트 검색</a></li>
+								<li><a href="../project/create.html">프로젝트 등록</a></li>
+								<li><a href="../partner/create.html">프리랜서 등록</a></li>
+								<li>
+									<a href="../introduce/we_people.html">위플즈 소개</a>
+									<ul class="depth2">
+										<li><a href="../introduce/we_people.html">We:People</a></li>
+										<li><a href="../introduce/we_project.html">We:Project</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="../community/list.html">커뮤니티</a>
+									<ul class="depth2">
+										<li><a href="../community/inquiry.html">1:1문의</a></li>
+										<li><a href="../community/faq.html">FAQ</a></li>
+										<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
+									</ul>
+								</li>
 							</ul>
-						</li>
-						<!-- 로그인 후 
-						<li><a href="javascript:void(0);">로그아웃</a></li>
-						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
-						-->
-					</ul>
-					<ul class="category animate fast fadeInDown">
-							<li><a href="../project/search.html">프로젝트 검색</a></li>
-							<li><a href="../project/create.html">프로젝트 등록</a></li>
-							<li><a href="../partner/create.html">프리랜서 등록</a></li>
-							<li>
-								<a href="../introduce/we_people.html">위플즈 소개</a>
-								<ul class="depth2">
-									<li><a href="../introduce/we_people.html">We:People</a></li>
-									<li><a href="../introduce/we_project.html">We:Project</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="../community/list.html">커뮤니티</a>
-								<ul class="depth2">
-									<li><a href="../community/inquiry.html">1:1문의</a></li>
-									<li><a href="../community/faq.html">FAQ</a></li>
-									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
-								</ul>
-							</li>
-						</ul>	
+						</div>
+					</div>	
 				</div>
 			</nav>	
 		</div>
@@ -119,23 +123,23 @@
 		<div class="sub-top-wrap"></div>	
 		<div class="contents-wrap inner">
 			<div class="contents" id="contents">
-				<div class="contents-head">
+				<div class="contents-head clear">
 					<h2 class="heading-wrap-02">
 						<span class="txt-color-purple2">성과측정을 통한 보너스 지급 &#47; 고객평가 90점 이상 시 근속인정 2배</span><br>
 						<strong>미래에셋생명 퇴직연금 플랫폼 구축 프로젝트 개발자 모집</strong>
 					</h2>
 					<ul>
-						<li><b>수요기업</b><span>(주)피씨엔</span></li>
-						<li><b>프로젝트 매니저</b><span>전효훈 실장</span></li>
+						<li class="txt-rendering"><b>수요기업</b><span>(주)피씨엔</span></li>
+						<li class="txt-rendering"><b>프로젝트 매니저</b><span>전효훈 실장</span></li>
 					</ul>
 					<div class="etc-info">
-						<div class="tag-wrap">
+						<span class="tag-wrap">
 							<span class="icon-tag green"><em>신규</em></span>
 							<span class="icon-tag orange"><em>마감임박</em></span>
-						</div>
-						<div class="btn-wrap-inline">
+						</span>
+						<span class="btn-wrap-inline">
 							<button type="button" class="btn-type-icon2 xs wish selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
-						</div>
+						</span>
 					</div>	
 				</div><!-- // contents-head -->
 
@@ -143,23 +147,25 @@
 					<div class="prj-detail">
 						<div class="info">
 							<p>본 공고는 <b>PM, 기획, 개발, 디자인, 퍼블리싱</b> 관련 모집입니다.</p>
-							<ul>
-								<li class="icon-pm">
-									<b>PM</b>&nbsp;<b class="limit">1</b>명 모집에 <b class="applicant">5</b>명  지원 하였습니다.
-								</li>
-								<li class="icon-plan">
-									<b>기획</b>&nbsp;<b class="limit">6</b>명 모집에 <b class="applicant">18</b>명  지원 하였습니다.
-								</li>
-								<li class="icon-dev">
-									<b>PM</b>&nbsp;<b class="limit">6</b>명 모집에 <b class="applicant">21</b>명  지원 하였습니다.
-								</li>
-								<li class="icon-des">
-									<b>PM</b>&nbsp;<b class="limit">2</b>명 모집에 <b class="applicant">6</b>명  지원 하였습니다.
-								</li>
-								<li class="icon-pub">
-									<b>PM</b>&nbsp;<b class="limit">2</b>명 모집에 <b class="applicant">6</b>명  지원 하였습니다.
-								</li>
-							</ul>
+							<div class="recruit">
+								<ul>
+									<li class="icon-pm txt-rendering">
+										<b>PM</b>&nbsp;<b class="limit">1</b>명 모집에 <b class="applicant">5</b>명  지원 하였습니다.
+									</li>
+									<li class="icon-plan txt-rendering">
+										<b>기획</b>&nbsp;<b class="limit">6</b>명 모집에 <b class="applicant">18</b>명  지원 하였습니다.
+									</li>
+									<li class="icon-dev txt-rendering">
+										<b>개발</b>&nbsp;<b class="limit">6</b>명 모집에 <b class="applicant">21</b>명  지원 하였습니다.
+									</li>
+									<li class="icon-des txt-rendering">
+										<b>디자인</b>&nbsp;<b class="limit">2</b>명 모집에 <b class="applicant">6</b>명  지원 하였습니다.
+									</li>
+									<li class="icon-pub txt-rendering">
+										<b>퍼블리싱</b>&nbsp;<b class="limit">2</b>명 모집에 <b class="applicant">6</b>명  지원 하였습니다.
+									</li>
+								</ul>
+							</div>
 							<div class="detail-info">
 								<dl class="table">
 									<dt><strong>프로젝트기간</strong></dt>
@@ -171,7 +177,7 @@
 								</dl>
 								<dl class="table">
 									<dt><strong>프로젝트 장소</strong></dt>
-									<dd><span class="txt-ellipsis">대전 &gt; 유성구, 서울 &gt; 강남구, 세종 &gt; 세종시</span></dd>
+									<dd><span>대전 &gt; 유성구, 서울 &gt; 강남구, 세종 &gt; 세종시</span></dd>
 								</dl>
 								<dl class="table">
 									<dt><strong>접수마감일</strong></dt>
@@ -187,7 +193,7 @@
 								</dl>
 							</div>
 						</div>
-						<div class="btn-wrap align-c">
+						<div class="btn-wrap align-c col-mid-2-2">
 							<button type="button" class="btn-type-lg purple active-modal" data-modal-name="apply"><em class="txt-rendering ft-md">지원하기</em></button>
 							<button type="button" class="btn-type-mid" onclick="javascript:location.href='../project/search.html'"><em class="txt-rendering ft-md">목록</em></button>
 						</div>
@@ -280,7 +286,7 @@
 					</div>
 					-->
 
-					<div class="btn-wrap align-c">
+					<div class="btn-wrap align-c col-mid-2-2">
 						<button type="button" class="btn-type-lg purple active-modal" data-modal-name="apply"><em class="txt-rendering ft-md">지원하기</em></button>
 						<button type="button" class="btn-type-mid" onclick="javascript:location.href='../project/search.html'"><em class="txt-rendering ft-md">목록</em></button>
 					</div>
