--- a/guide/file_list.html
+++ b/guide/file_list.html
@@ -21,8 +21,8 @@
 								<col style="width:15%;"/>
 								<col style="width:15%;"/>
 								<col style="width:auto;"/>
-								<col style="width:7%;"/>
-								<col style="width:14%;"/>
+								<col style="width:10%;"/>
+								<col style="width:10%;"/>
 							</colgroup>
 							<thead>
 								<tr>
@@ -31,8 +31,8 @@
 									<th scope="col"></th>
 									<th scope="col"></th>
 									<th scope="col">파일경로</th>
-									<th scope="col">작업여부(완료일정)</th>
-									<th scope="col">비고</th>
+									<th scope="col">pc (완료일정)</th>
+									<th scope="col">mobile (완료일정)</th>
 								</tr>
 							</thead>
 							<tfoot></tfoot>
@@ -44,7 +44,7 @@
 									<td colspan="2">메인</td>
 									<td><a href="../html/index.html" target="_blank">/index.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 
 								<!-- member -->
@@ -54,7 +54,7 @@
 									<td colspan="2">로그인</td>
 									<td><a href="../html/member/signin.html" target="_blank">/member/signin.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
@@ -62,21 +62,21 @@
 									<td>마이페이지</td>
 									<td><a href="../html/member/partners_mypage.html" target="_blank">/member/partners_mypage.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td>관심프로젝트</td>
 									<td><a href="../html/member/wish_list.html" target="_blank">/member/wish_list.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td>프로젝트 활동내역</td>
 									<td><a href="../html/member/activities.html" target="_blank">/member/activities.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
@@ -84,21 +84,21 @@
 									<td>마이페이지</td>
 									<td><a href="../html/member/client_mypage.html" target="_blank">/member/client_mypage.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td>프로젝트 진행내역</td>
 									<td><a href="../html/member/progress.html" target="_blank">/member/progress.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td>프로젝트 지원자</td>
 									<td><a href="../html/member/applicant.html" target="_blank">/member/applicant.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								
 
@@ -109,21 +109,21 @@
 									<td colspan="2">기업 회원가입</td>
 									<td><a href="../html/client/signup.html" target="_blank">/client/signup.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">기업정보등록</td>
 									<td><a href="../html/client/create.html" target="_blank">/client/create.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">기업정보수정</td>
 									<td><a href="../html/client/modify.html" target="_blank">/client/modify.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>작업중 (3/21)</td>
 								</tr>
 
 								<!-- partner -->
@@ -133,28 +133,28 @@
 									<td colspan="2">프리랜서 회원가입</td>
 									<td><a href="../html/partner/signup.html" target="_blank">/partner/signup.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">프리랜서 정보등록</td>
 									<td><a href="../html/partner/create.html" target="_blank">/partner/create.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">프리랜서 정보수정</td>
 									<td><a href="../html/partner/modify.html" target="_blank">/partner/modify.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>작업중 (3/21)</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">프리랜서 등록완료</td>
 									<td><a href="../html/partner/finish.html" target="_blank">/partner/finish.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 
 								<!-- project -->
@@ -164,28 +164,28 @@
 									<td colspan="2">프로젝트 검색</td>
 									<td><a href="../html/project/search.html" target="_blank">/project/search.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">프로젝트 등록</td>
 									<td><a href="../html/project/create.html" target="_blank">/project/create.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">프로젝트 등록완료</td>
 									<td><a href="../html/project/finish.html" target="_blank">/project/finish.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">프로젝트 상세</td>
 									<td><a href="../html/project/detail.html" target="_blank">/project/detail.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 
 								<!-- community -->
@@ -195,28 +195,28 @@
 									<td colspan="2">커뮤니티 리스트</td>
 									<td><a href="../html/community/list.html" target="_blank">/community/list.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">커뮤니티 상세</td>
 									<td><a href="../html/community/view.html" target="_blank">/community/view.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">1:1 문의하기</td>
 									<td><a href="../html/community/inquiry.html" target="_blank">/community/inquiry.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">FAQ</td>
 									<td><a href="../html/community/faq.html" target="_blank">/community/faq.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 
 								<!-- 위플즈 소개 -->
@@ -226,14 +226,14 @@
 									<td colspan="2">개인서비스소개</td>
 									<td><a href="../html/introduce/we_people.html" target="_blank">/introduce/we_people.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 								<tr>
 									<td class="count"></td>
 									<td colspan="2">기업서비스소개</td>
 									<td><a href="../html/introduce/we_project.html" target="_blank">/introduce/we_project.html</a></td>
 									<td>완료</td>
-									<td></td>
+									<td>완료</td>
 								</tr>
 							</tbody>
 						</table>
