--- a/html/introduce/we_people.html
+++ b/html/introduce/we_people.html
@@ -35,12 +35,12 @@
 	<dl id="skipNavigation">
 		<dt class="hidden-txt">바로가기 및 건너띄기 링크</dt>
 		<dd><a href="#h-menu"><em>주 메뉴 바로가기</em></a></dd>
-		<dd><a href="#main"><em>본문으로 바로가기</em></a></dd>
+		<dd><a href="#wrap"><em>본문으로 바로가기</em></a></dd>
 	</dl>
 
 	<header>
-		<div class="container">
-			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
+		<div class="inner-wrap">
+			<span class="logo-wrap"><a href="../index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
@@ -70,46 +70,50 @@
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
-				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
+				<a href="javascript:void(0);"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
 					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
 					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fast fadeInDown">
+					<div>
+						<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="../member/signin.html">로그인</a></li>
-						<li class="join">
+							<li><a href="../member/signin.html">로그인</a></li>
+							<li class="join">
+								<ul>
+									<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+									<li><a href="../client/signup.html">기업회원 가입</a></li>
+								</ul>
+							</li>
+							<!-- 로그인 후 
+							<li><a href="javascript:void(0);">로그아웃</a></li>
+							<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+							-->
+						</ul>
+						<div class="category animate fast fadeInDown">
 							<ul>
-								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
-								<li><a href="../client/signup.html">기업회원 가입</a></li>
+								<li><a href="../project/search.html">프로젝트 검색</a></li>
+								<li><a href="../project/create.html">프로젝트 등록</a></li>
+								<li><a href="../partner/create.html">프리랜서 등록</a></li>
+								<li>
+									<a href="../introduce/we_people.html">위플즈 소개</a>
+									<ul class="depth2">
+										<li><a href="../introduce/we_people.html">We:People</a></li>
+										<li><a href="../introduce/we_project.html">We:Project</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="../community/list.html">커뮤니티</a>
+									<ul class="depth2">
+										<li><a href="../community/inquiry.html">1:1문의</a></li>
+										<li><a href="../community/faq.html">FAQ</a></li>
+										<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
+									</ul>
+								</li>
 							</ul>
-						</li>
-						<!-- 로그인 후 
-						<li><a href="javascript:void(0);">로그아웃</a></li>
-						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
-						-->
-					</ul>
-					<ul class="category animate fast fadeInDown">
-							<li><a href="../project/search.html">프로젝트 검색</a></li>
-							<li><a href="../project/create.html">프로젝트 등록</a></li>
-							<li><a href="../partner/create.html">프리랜서 등록</a></li>
-							<li>
-								<a href="../introduce/we_people.html">위플즈 소개</a>
-								<ul class="depth2">
-									<li><a href="../introduce/we_people.html">We:People</a></li>
-									<li><a href="../introduce/we_project.html">We:Project</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="../community/list.html">커뮤니티</a>
-								<ul class="depth2">
-									<li><a href="../community/inquiry.html">1:1문의</a></li>
-									<li><a href="../community/faq.html">FAQ</a></li>
-									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
-								</ul>
-							</li>
-						</ul>	
+						</div>
+					</div>	
 				</div>
 			</nav>	
 		</div>
@@ -121,20 +125,24 @@
 			<div class="inner">
 				<h2><span>We&nbsp;:&nbsp;</span><strong>People</strong></h2>	
 				<dl>
-					<dt><strong>국내 최초! 프리랜서 활동 지원 플랫폼 &lsquo;위플즈&rsquo;입니다.</strong></dt>
+					<dt><strong>국내 최초! 프리랜서 활동 지원 플랫폼<br class="mob-only" /> &lsquo;위플즈&rsquo;입니다.</strong></dt>
 					<dd>
 						<ul class="support">
-							<li><a href="#">금융지원</a></li>
-							<li><a href="#">복지지원</a></li>
-							<li><a href="#">교육지원</a></li>
-							<li><a href="#">법률상담</a></li>
-							<li><a href="#">세무대행</a></li>
+							<li><a href="#"><em class="txt-rendering">금융지원</em></a></li>
+							<li><a href="#"><em class="txt-rendering">복지지원</em></a></li>
+							<li><a href="#"><em class="txt-rendering">교육지원</em></a></li>
+							<li><a href="#"><em class="txt-rendering">법률상담</em></a></li>
+							<li><a href="#"><em class="txt-rendering">세무대행</em></a></li>
 						</ul>
 					</dd>
-				</dl> 
+				</dl>
+				<div class="btn-wrap align-r">
+					<button type="button" class="btn-type line transparent type01 scroll"><em class="txt-rendering">Detail</em></button>
+					<button type="button" class="btn-type line transparent type02" onclick="javascript:location.href='we_project.html'"><em class="txt-rendering">기업회원혜택보기</em></button>
+				</div> 
 				<div class="story">
-					<span class="animate fadeInUp"><em class="hidden-txt">아이콘 영역</em></span>
-					<p class="animate fadeInUp">
+					<span class="animate fadeInUp_row"><em class="hidden-txt">아이콘 영역</em></span>
+					<p class="animate fadeInUp_row">
 						위플즈는 프리랜서로 활동하시는 모든 분들에게<br class="pc-only" />
 						금융&middot;복지&middot;교육&middot;법률&middot;세무 등 다양한 활동지원 업무를 제공하여<br class="pc-only" />
 						프리랜서 활동을 지속적으로 할 수 있도록 지원해드리는 플랫폼 입니다.
@@ -144,91 +152,93 @@
 		</section><!-- // section-wrap-01 -->
 
 		<section class="section-wrap-02">
-			<div class="inner">
-				<h3>다양한 프리랜서 활동지원 업무</h3>
-				<ul class="activities">
-					<li class="clear">
-						<div class="img-cts animate animate-delay-01 fadeInLeft"><img src="../static/img/illustration-01.png" alt="금융지원"></div>
-						<div class="txt-cts animate animate-delay-01 fadeInRight">
-							<div>
-								<h4>금융지원<span>(퇴직금 및 대출제도)</span></h4>
-								<ul class="dot-list">
-									<li class="txt-rendering">
-										프리랜서로 활동한 기간동안 위플즈와 계약하여 지급된 <b>총 급여의 10%를 회원탈퇴 시 퇴직금</b>으로 지급합니다.<br /> 
-										(1년 이상 활동 시 지급 / 회원탈퇴 후 1년 간 재가입 불가)
-									</li>
-									<li class="txt-rendering">
-										누적된 퇴직금을 담보로 <b>저리 대출</b>을 받을 수 있습니다.<br /> 
-										(회원등급에 따른 차등 이율 적용 / 대출시점에 누적된 퇴직금의 100% 대출 가능)
-									</li>
-									<li class="txt-rendering">
-										다양한 금융상품에 안정적으로 투자할 수 있는 <b>재태크 투자교육</b> 및 <b>재태크 방법</b>을 <b>안내</b>해드립니다
-									</li>
-								</ul>	
+			<div class="contents-wrap inner">
+				<div class="contents">
+					<h3>다양한 프리랜서 활동지원 업무</h3>
+					<ul class="activities">
+						<li class="clear">
+							<div class="img-cts animate animate-delay-01 fadeInLeft"><img src="../static/img/illustration-01.png" alt="금융지원"></div>
+							<div class="txt-cts animate animate-delay-01 fadeInRight">
+								<div>
+									<h4>금융지원<span>(퇴직금 및 대출제도)</span></h4>
+									<ul class="dot-list">
+										<li class="txt-rendering">
+											프리랜서로 활동한 기간동안 위플즈와 계약하여 지급된 <b>총 급여의 10%를 회원탈퇴 시 퇴직금</b>으로 지급합니다.<br /> 
+											(1년 이상 활동 시 지급 / 회원탈퇴 후 1년 간 재가입 불가)
+										</li>
+										<li class="txt-rendering">
+											누적된 퇴직금을 담보로 <b>저리 대출</b>을 받을 수 있습니다.<br /> 
+											(회원등급에 따른 차등 이율 적용 / 대출시점에 누적된 퇴직금의 100% 대출 가능)
+										</li>
+										<li class="txt-rendering">
+											다양한 금융상품에 안정적으로 투자할 수 있는 <b>재태크 투자교육</b> 및 <b>재태크 방법</b>을 <b>안내</b>해드립니다
+										</li>
+									</ul>	
+								</div>
 							</div>
-						</div>
-					</li>
-					<li class="clear">
-						<div class="img-cts animate animate-delay-01 fadeInRight"><img src="../static/img/illustration-02.png" alt="복지지원"></div>
-						<div class="txt-cts animate animate-delay-01 fadeInLeft">
-							<div>
-								<h4>복지지원</h4>
-								<ul class="dot-list">
-									<li class="txt-rendering">
-										<b>국내외 여행지의 숙박시설 이용</b> 시 <b>할인된 가격</b>으로 예약을 할 수 있습니다.<br />
-										(1년 이상 활동 시 지원 / 회원탈퇴 시 이용 불가)
-									</li>
-									<li class="txt-rendering">
-										노트북, 데스크탑 등 PC 및 IT 기기 구매 시 할인된 가격으로 구매할 수 있습니다.<br />
-										(1년 이상 활동 시 지원 / 회원탈퇴 시 이용 불가)
-									</li>
-									<li class="txt-rendering">
-										생활에 필요한 다양한 <b>생필품</b>을 <b>저렴한 가격</b>으로 구매할 수 있습니다.
-									</li>
-								</ul>
+						</li>
+						<li class="clear">
+							<div class="img-cts animate animate-delay-01 fadeInRight"><img src="../static/img/illustration-02.png" alt="복지지원"></div>
+							<div class="txt-cts animate animate-delay-01 fadeInLeft">
+								<div>
+									<h4>복지지원</h4>
+									<ul class="dot-list">
+										<li class="txt-rendering">
+											<b>국내외 여행지의 숙박시설 이용</b> 시 <b>할인된 가격</b>으로 예약을 할 수 있습니다.<br />
+											(1년 이상 활동 시 지원 / 회원탈퇴 시 이용 불가)
+										</li>
+										<li class="txt-rendering">
+											노트북, 데스크탑 등 PC 및 IT 기기 구매 시 할인된 가격으로 구매할 수 있습니다.<br />
+											(1년 이상 활동 시 지원 / 회원탈퇴 시 이용 불가)
+										</li>
+										<li class="txt-rendering">
+											생활에 필요한 다양한 <b>생필품</b>을 <b>저렴한 가격</b>으로 구매할 수 있습니다.
+										</li>
+									</ul>
+								</div>
 							</div>
-						</div>
-					</li>
-					<li class="clear">
-						<div class="img-cts animate animate-delay-01 fadeInLeft"><img src="../static/img/illustration-03.png" alt="교육지원"></div>
-						<div class="txt-cts animate animate-delay-01 fadeInRight">
-							<div>
-								<h4>교육지원</h4>
-								<ul class="dot-list">
-									<li class="txt-rendering">
-										<b>업무 스킬 업을 위한 IT교육</b>(프로그램개발/디자인/기획/퍼블리싱/프로젝트관리)을 주기적으로 받으실 수 있습니다.
-									</li>
-									<li class="txt-rendering">
-										프로젝트를 진행하시면서 <b>기술 및 업무이해에 어려운 점</b>을 1:1 문의를 통해 <b>해소</b>하실 수 있습니다.
-									</li>
-									<li class="txt-rendering">
-										프로젝트 투입 전 <b>프로젝트 진행과 관련된 필수 교육</b>을 받으실 수 있습니다.
-									</li>
-								</ul>	
+						</li>
+						<li class="clear">
+							<div class="img-cts animate animate-delay-01 fadeInLeft"><img src="../static/img/illustration-03.png" alt="교육지원"></div>
+							<div class="txt-cts animate animate-delay-01 fadeInRight">
+								<div>
+									<h4>교육지원</h4>
+									<ul class="dot-list">
+										<li class="txt-rendering">
+											<b>업무 스킬 업을 위한 IT교육</b>(프로그램개발/디자인/기획/퍼블리싱/프로젝트관리)을 주기적으로 받으실 수 있습니다.
+										</li>
+										<li class="txt-rendering">
+											프로젝트를 진행하시면서 <b>기술 및 업무이해에 어려운 점</b>을 1:1 문의를 통해 <b>해소</b>하실 수 있습니다.
+										</li>
+										<li class="txt-rendering">
+											프로젝트 투입 전 <b>프로젝트 진행과 관련된 필수 교육</b>을 받으실 수 있습니다.
+										</li>
+									</ul>	
+								</div>
 							</div>
-						</div>
-					</li>
-					<li class="clear">
-						<div class="img-cts animate animate-delay-01 fadeInRight"><img src="../static/img/illustration-04.png" alt="법률상담ㆍ세무대행"></div>
-						<div class="txt-cts animate animate-delay-01 fadeInLeft">
-							<div>
-								<h4>법률상담&middot;세무대행</h4>
-								<ul class="dot-list">
-									<li class="txt-rendering">
-										프리랜서 활동 및 프로젝트 관련 법적분쟁이 있는 경우 <b>무료</b>로 <b>법률 상담</b>을 할 수 있습니다.
-									</li>
-									<li class="txt-rendering">
-										<b>연말정산 및 종합소득세 신고</b>를 무료로 진행할 수 있습니다.<br />(1년 이상 활동 시 지원 / 회원탈퇴 시 이용 불가)
-									</li>
-									<li class="txt-rendering">
-										프리랜서 활동을 하면서 발생할 수 있는 <b>다양한 이슈사항에 대해 상담</b>을 받으실 수 있습니다.
-									</li>
-								</ul>	
-							</div>							
-						</div>
-					</li>
-				</ul>
-				<div class="btn-wrap align-c"><button class="btn-type-lg purple" onclick="javascript:location.href='../partner/signup.html'"><em class="ft-md">프리랜서 가입하기</em></button></div>
+						</li>
+						<li class="clear">
+							<div class="img-cts animate animate-delay-01 fadeInRight"><img src="../static/img/illustration-04.png" alt="법률상담ㆍ세무대행"></div>
+							<div class="txt-cts animate animate-delay-01 fadeInLeft">
+								<div>
+									<h4>법률상담&middot;세무대행</h4>
+									<ul class="dot-list">
+										<li class="txt-rendering">
+											프리랜서 활동 및 프로젝트 관련 법적분쟁이 있는 경우 <b>무료</b>로 <b>법률 상담</b>을 할 수 있습니다.
+										</li>
+										<li class="txt-rendering">
+											<b>연말정산 및 종합소득세 신고</b>를 무료로 진행할 수 있습니다.<br />(1년 이상 활동 시 지원 / 회원탈퇴 시 이용 불가)
+										</li>
+										<li class="txt-rendering">
+											프리랜서 활동을 하면서 발생할 수 있는 <b>다양한 이슈사항에 대해 상담</b>을 받으실 수 있습니다.
+										</li>
+									</ul>	
+								</div>							
+							</div>
+						</li>
+					</ul>
+					<div class="btn-wrap align-c"><button class="btn-type-lg purple" onclick="javascript:location.href='../partner/signup.html'"><em class="ft-md txt-rendering">프리랜서 가입하기</em></button></div>
+				</div>
 			</div>
 		</section><!-- // section-wrap-02 -->
 	</div><!-- // #wrap -->
@@ -263,6 +273,17 @@
 	<script>
 		$(function(){
 			commonFunction().motion();
+
+			document.querySelector('.scroll').addEventListener('click', function(e){
+				e.preventDefault();
+				e.stopPropagation();
+
+				var setTop = $('.story').offset().top - $('header').height();
+
+				$('body, html').animate({
+					scrollTop : setTop + 'px'
+				});
+			});
 		});
 	</script>
 </body>
