--- a/html/member/partners_mypage.html
+++ b/html/member/partners_mypage.html
@@ -38,8 +38,8 @@
 	</dl>
 
 	<header>
-		<div class="container">
-			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
+		<div class="inner-wrap">
+			<span class="logo-wrap"><a href="../index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
@@ -69,46 +69,50 @@
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
-				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
+				<a href="javascript:void(0);"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
 					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
 					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fast fadeInDown">
+					<div>
+						<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="../member/signin.html">로그인</a></li>
-						<li class="join">
+							<li><a href="../member/signin.html">로그인</a></li>
+							<li class="join">
+								<ul>
+									<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+									<li><a href="../client/signup.html">기업회원 가입</a></li>
+								</ul>
+							</li>
+							<!-- 로그인 후 
+							<li><a href="javascript:void(0);">로그아웃</a></li>
+							<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+							-->
+						</ul>
+						<div class="category animate fast fadeInDown">
 							<ul>
-								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
-								<li><a href="../client/signup.html">기업회원 가입</a></li>
+								<li><a href="../project/search.html">프로젝트 검색</a></li>
+								<li><a href="../project/create.html">프로젝트 등록</a></li>
+								<li><a href="../partner/create.html">프리랜서 등록</a></li>
+								<li>
+									<a href="../introduce/we_people.html">위플즈 소개</a>
+									<ul class="depth2">
+										<li><a href="../introduce/we_people.html">We:People</a></li>
+										<li><a href="../introduce/we_project.html">We:Project</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="../community/list.html">커뮤니티</a>
+									<ul class="depth2">
+										<li><a href="../community/inquiry.html">1:1문의</a></li>
+										<li><a href="../community/faq.html">FAQ</a></li>
+										<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
+									</ul>
+								</li>
 							</ul>
-						</li>
-						<!-- 로그인 후 
-						<li><a href="javascript:void(0);">로그아웃</a></li>
-						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
-						-->
-					</ul>
-					<ul class="category animate fast fadeInDown">
-							<li><a href="../project/search.html">프로젝트 검색</a></li>
-							<li><a href="../project/create.html">프로젝트 등록</a></li>
-							<li><a href="../partner/create.html">프리랜서 등록</a></li>
-							<li>
-								<a href="../introduce/we_people.html">위플즈 소개</a>
-								<ul class="depth2">
-									<li><a href="../introduce/we_people.html">We:People</a></li>
-									<li><a href="../introduce/we_project.html">We:Project</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="../community/list.html">커뮤니티</a>
-								<ul class="depth2">
-									<li><a href="../community/inquiry.html">1:1문의</a></li>
-									<li><a href="../community/faq.html">FAQ</a></li>
-									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
-								</ul>
-							</li>
-						</ul>	
+						</div>
+					</div>	
 				</div>
 			</nav>	
 		</div>
@@ -120,17 +124,17 @@
 			<h2 class="heading-wrap-02 long-txt">
 				<span class="thumbnail"><img src="../static/img/partners-thumbnail.jpg" alt="프리랜서 프로필 사진"></span><br/>
 				홍길동 <em>회원님 반갑습니다!</em><br/>
-				<span>회원님은 <b>2021년 5월 21일 현재 위플즈 회원</b>으로 <b>총 3개의 프로젝트에 420일 동안 활동 중</b>에 있습니다<br/>
+				<span class="txt-rendering">회원님은 <b>2021년 5월 21일 현재 위플즈 회원</b>으로 <b>총 3개의 프로젝트에 420일 동안 활동 중</b>에 있습니다<br/>
 				<em class="txt-rendering">(위플즈와 직접 계약 후 진행한 프로젝트에 대한 활동내역 입니다)</em></span>
 			</h2>
 		</div>
 		<div class="fixed-wrap inner">
 			<div class="form-inline">
 				<ul class="col-4">
-					<li class="activities"><a href="../member/activities.html"><em>프로젝트 활동내역</em></a></li>
-					<li class="wish"><a href="../member/wish_list.html"><em>관심 프로젝트</em></a></li>
-					<li class="modified"><a href="../partner/modify.html"><em>개인정보수정</em></a></li>
-					<li class="inquiry"><a href="../community/inquiry.html"><em>1:1 문의</em></a></li>
+					<li class="activities"><a href="../member/activities.html"><em class="txt-rendering">프로젝트<br class="mob-only" /> 활동내역</em></a></li>
+					<li class="wish"><a href="../member/wish_list.html"><em class="txt-rendering">관심<br class="mob-only" /> 프로젝트</em></a></li>
+					<li class="modified"><a href="../partner/modify.html"><em class="txt-rendering">개인정보<br class="mob-only" />수정</em></a></li>
+					<li class="inquiry"><a href="../community/inquiry.html"><em class="txt-rendering">1:1<br class="mob-only" /> 문의</em></a></li>
 				</ul>	
 			</div>	
 		</div>	
@@ -142,15 +146,56 @@
 							<img src="../static/img/grade-bronze.gif" alt="회원등급">
 							<figcaption class="hidden-txt">회원등급</figcaption>
 						</figure>
-						<p><strong>홍길동</strong>님의 회원등급은 <b class="member-grade bronze">Bronze</b>입니다 <span class="anchor-toolTip help" data-toolTip="grade--info"><em>?</em></span></p>
+
 						<div>
+							<strong>홍길동</strong>님의 회원등급은<br class="mob-only" /> <b class="member-grade bronze">Bronze</b>입니다 <br class="mob-only" />
+							<div class="anchor-toolTip help">
+								<span>?</span>
+								<!-- 회원등급 부가설명 -->
+								<div class="toolTip focusable" id="grade--info">
+									<div>
+										<div>
+											<div>
+												<div class="grade-standard">
+													<div class="title"><strong>회원등급 기준</strong><span>(회원등급은 매년 1월 1일에 업데이트가 됩니다)</span></div>
+													<ul>
+														<li><strong>Diamond</strong><span>활동이력 5년 이상 and 고객평가점수(평균) 90점 이상</span></li>
+														<li><strong>Gold</strong><span>활동이력 3년 이상 and 고객평가점수(평균) 80점 이상</span></li>
+														<li><strong>Silver</strong><span>활동이력 1년 이상 and 고객평가점수(평균) 70점 이상</span></li>
+														<li><strong>Bronze</strong><span>신입회원</span></li>
+													</ul>
+													<div class="description">
+														<p class="txt-rendering">두가지 조건 중 하나의 조건만 충족할 경우는 한단계 낮은 등급으로 회원등급이 분류가 됩니다.</p>
+														<p class="txt-rendering">(회원등급은 1년에 한번씩 갱신이 되며 이전 년도에 활동이 없거나 기준에 미달될 경우 회원등급은 강등될 수 있습니다)</p>
+													</div>
+												</div>
+												<div class="grade-benefit">
+													<div class="title"><strong>등급 별 혜택</strong></div>
+													<ul>
+														<li><strong>Diamond</strong><span>대출이율 2%, 복지포인트 매년 100포인트 제공</span></li>
+														<li><strong>Gold</strong><span>대출이율 3%, 복지포인트 매년 50포인트 제공</span></li>
+														<li><strong>Silver</strong><span>대출이율 4%, 복지포인트 매년 30포인트 제공</span></li>
+														<li><strong>Bronze</strong><span>대출 불가, 복지포인트 미지급</span></li>
+													</ul>
+													<div class="description">
+														<p class="txt-rendering">복지포인트는 1포인트가 1만원에 해당 되며, 100포인트 제공 시 100만원 상당의 복지서비스를 제공받으실 수 있습니다.</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="member-info">
 							<dl class="table">
-								<dt>고객평가점수(평균) : </dt>
-								<dd><strong>92</strong>점</dd>
+								<dt class="txt-rendering">고객평가점수(평균) : </dt>
+								<dd><strong class="txt-rendering">92</strong>점</dd>
 							</dl>
 							<dl class="table">
-								<dt>보유퇴직금 : </dt>
-								<dd><strong>650만원</strong>(담보대출가능)</dd>
+								<dt class="txt-rendering">보유퇴직금 : </dt>
+								<dd><strong class="txt-rendering">650만원</strong>(담보대출가능)</dd>
 							</dl>
 						</div>
 					</div>
@@ -163,8 +208,8 @@
 				</div>
 				<div class="contents-body">
 					<div class="info">
-						<p>위플즈 회원으로 가입 후 365일 이상 프로젝트에 투입을 하신 이력이 있으면 하기 서비스를 제공받으실 수 있습니다.</p>
-						<p>단, 교육신청은 누구나 할 수 있으며 교육이 필요하신 회원은 아래 서비스 메뉴에서 신청해주세요.</p>
+						<p class="txt-rendering">위플즈 회원으로 가입 후 365일 이상 프로젝트에 투입을 하신 이력이 있으면 하기 서비스를 제공받으실 수 있습니다.</p>
+						<p class="txt-rendering">단, 교육신청은 누구나 할 수 있으며 교육이 필요하신 회원은 아래 서비스 메뉴에서 신청해주세요.</p>
 					</div>
 					<ul class="partners-benefit">
 						<li><a href="#"><span>퇴직금 신청</span></a></li>
@@ -179,39 +224,10 @@
 						<dd><span class="txt-rendering">회원탈퇴 시 1년 간 재가입이 불가함으로 지속적인 활동이 필요한 회원은 퇴직금 담보대출 제도를 이용해주시기 바랍니다.</span></dd>
 					</dl>
 				</div><!-- // contents-body-->
-
-				<div class="toolTip" id="grade--info">
-					<div>
-						<div class="grade-standard">
-							<div class="title"><strong>회원등급 기준</strong><span>(회원등급은 매년 1월 1일에 업데이트가 됩니다)</span></div>
-							<ul>
-								<li><strong>Diamond</strong><span>활동이력 5년 이상 and 고객평가점수(평균) 90점 이상</span></li>
-								<li><strong>Gold</strong><span>활동이력 3년 이상 and 고객평가점수(평균) 80점 이상</span></li>
-								<li><strong>Silver</strong><span>활동이력 1년 이상 and 고객평가점수(평균) 70점 이상</span></li>
-								<li><strong>Bronze</strong><span>신입회원</span></li>
-							</ul>
-							<div class="description">
-								<p class="txt-rendering">두가지 조건 중 하나의 조건만 충족할 경우는 한단계 낮은 등급으로 회원등급이 분류가 됩니다.</p>
-								<p class="txt-rendering">(회원등급은 1년에 한번씩 갱신이 되며 이전 년도에 활동이 없거나 기준에 미달될 경우 회원등급은 강등될 수 있습니다)</p>
-							</div>
-						</div>
-						<div class="grade-benefit">
-							<div class="title"><strong>등급 별 혜택</strong></div>
-							<ul>
-								<li><strong>Diamond</strong><span>대출이율 2%, 복지포인트 매년 100포인트 제공</span></li>
-								<li><strong>Gold</strong><span>대출이율 3%, 복지포인트 매년 50포인트 제공</span></li>
-								<li><strong>Silver</strong><span>대출이율 4%, 복지포인트 매년 30포인트 제공</span></li>
-								<li><strong>Bronze</strong><span>대출 불가, 복지포인트 미지급</span></li>
-							</ul>
-							<div class="description">
-								<p class="txt-rendering">복지포인트는 1포인트가 1만원에 해당 되며, 100포인트 제공 시 100만원 상당의 복지서비스를 제공받으실 수 있습니다.</p>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div><!-- // contents -->
 		</div><!-- // contents-wrap -->
 	</div><!-- // #wrap -->
+
 	<footer>
 		<div class="inner-wrap">
 			<ul>
