--- a/html/pop/popup.html
+++ b/html/pop/popup.html
@@ -25,7 +25,7 @@
 							<p><em class="txt-rendering">지원하신 프로젝트는 마이페이지에서 확인 가능합니다.</em></p>	
 						</div>
 					</div>
-					<div class="btn-wrap col-2">
+					<div class="btn-wrap col-lg-2">
 						<button class="btn-type-sm purple"><em class="txt-rendering">확인</em></button>
 						<button class="btn-type-sm darkPurple"><em class="txt-rendering">마이 페이지</em></button>
 					</div>
