--- a/html/project/create.html
+++ b/html/project/create.html
@@ -38,13 +38,13 @@
 	</dl>
 
 	<header>
-		<div class="container">
-			<span class="logo-wrap"><a href="index.html"><em class="hidden-txt">로고 이미지</em></a></span>
+		<div class="inner-wrap">
+			<span class="logo-wrap"><a href="../index.html"><em class="hidden-txt">로고 이미지</em></a></span>
 			<hgroup id="h-menu" class="inner-cts clear">
 				<div class="gnb">
 					<ul>
 						<li><a href="../partner/create.html">프리랜서 등록</a></li>
-						<li><a href="../project/create.html" class="selected">프로젝트 등록</a></li>
+						<li><a href="../project/create.html">프로젝트 등록</a></li>
 						<li><a href="../project/search.html" class="search">프로젝트 검색</a></li>
 					</ul>
 				</div>
@@ -69,46 +69,50 @@
 				</div>
 			</hgroup>	
 			<nav class="menu-all">
-				<a href="#menu-all"><span><em class="hidden-txt">전체메뉴</em></span></a>
+				<a href="javascript:void(0);"><span><em class="hidden-txt">전체메뉴</em></span></a>
 				<ul class="quick">
 					<li class="prj-add"><a href="../project/create.html"><em class="hidden-txt">프로젝트 등록 퀵 메뉴</em></a></li>
 					<li class="prj-search"><a href="../project/search.html"><em class="hidden-txt">프로젝트 검색 퀵 메뉴</em></a></li>
 				</ul>
 				<div>
-					<ul class="member animate fast fadeInDown">
+					<div>
+						<ul class="member animate fast fadeInDown">
 						<!-- 로그인 전 -->
-						<li><a href="../member/signin.html">로그인</a></li>
-						<li class="join">
+							<li><a href="../member/signin.html">로그인</a></li>
+							<li class="join">
+								<ul>
+									<li><a href="../partner/signup.html">프리랜서 가입</a></li>
+									<li><a href="../client/signup.html">기업회원 가입</a></li>
+								</ul>
+							</li>
+							<!-- 로그인 후 
+							<li><a href="javascript:void(0);">로그아웃</a></li>
+							<li><a href="../member/partners_mypage.html">마이페이지</a></li>
+							-->
+						</ul>
+						<div class="category animate fast fadeInDown">
 							<ul>
-								<li><a href="../partner/signup.html">프리랜서 가입</a></li>
-								<li><a href="../client/signup.html">기업회원 가입</a></li>
+								<li><a href="../project/search.html">프로젝트 검색</a></li>
+								<li><a href="../project/create.html">프로젝트 등록</a></li>
+								<li><a href="../partner/create.html">프리랜서 등록</a></li>
+								<li>
+									<a href="../introduce/we_people.html">위플즈 소개</a>
+									<ul class="depth2">
+										<li><a href="../introduce/we_people.html">We:People</a></li>
+										<li><a href="../introduce/we_project.html">We:Project</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="../community/list.html">커뮤니티</a>
+									<ul class="depth2">
+										<li><a href="../community/inquiry.html">1:1문의</a></li>
+										<li><a href="../community/faq.html">FAQ</a></li>
+										<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
+									</ul>
+								</li>
 							</ul>
-						</li>
-						<!-- 로그인 후 
-						<li><a href="javascript:void(0);">로그아웃</a></li>
-						<li><a href="../member/partners_mypage.html">마이페이지</a></li>
-						-->
-					</ul>
-					<ul class="category animate fast fadeInDown">
-							<li><a href="../project/search.html">프로젝트 검색</a></li>
-							<li><a href="../project/create.html">프로젝트 등록</a></li>
-							<li><a href="../partner/create.html">프리랜서 등록</a></li>
-							<li>
-								<a href="../introduce/we_people.html">위플즈 소개</a>
-								<ul class="depth2">
-									<li><a href="../introduce/we_people.html">We:People</a></li>
-									<li><a href="../introduce/we_project.html">We:Project</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="../community/list.html">커뮤니티</a>
-								<ul class="depth2">
-									<li><a href="../community/inquiry.html">1:1문의</a></li>
-									<li><a href="../community/faq.html">FAQ</a></li>
-									<li><a href="../community/list.html">위플즈 커뮤니티</a></li>
-								</ul>
-							</li>
-						</ul>	
+						</div>
+					</div>	
 				</div>
 			</nav>	
 		</div>
@@ -118,15 +122,15 @@
 		<h1 class="hidden-txt">프로젝트 등록</h1>
 		<div class="sub-top-wrap">
 			<h2 class="heading-wrap-02 long-txt">
-				귀사의 소중한 프로젝트에 최적의 인재&#47;기업을 추천해드립니다<br/>
-				<span>위플스는 5인 이상 투입인력 요청 시 프로젝트에 맞춤형 교육훈련을 실시합니다</span>
+				귀사의 소중한 프로젝트에<br class="mob-only" /> 최적의 인재&#47;기업을 추천해드립니다<br/>
+				<span>위플스는 5인 이상 투입인력 요청 시<br class="mob-only" /> 프로젝트에 맞춤형 교육훈련을 실시합니다</span>
 			</h2>
 		</div>
 		<div class="fixed-wrap inner">
 			<div class="form-inline">
 				<ul class="col-2">
-					<li class="service"><a href="../introduce/we_project.html"><em>We:Project 기업 서비스</em></a></li>
-					<li class="training"><a href="#"><em>맞춤형 교육훈련 요청</em></a></li>
+					<li class="service"><a href="../introduce/we_project.html"><em class="txt-rendering">We:Project<br class="mob-only" /> 기업 서비스</em></a></li>
+					<li class="training"><a href="#"><em class="txt-rendering">맞춤형<br class="mob-only" /> 교육훈련 요청</em></a></li>
 				</ul>	
 			</div>	
 		</div>	
@@ -140,9 +144,9 @@
 					<div class="form-list">
 						<form action="" method="post">
 							<dl class="table pd-none">
-								<dt><strong>계약방식</strong><br/><em class="txt-rendering">(검토 후 진행)</em></dt>
+								<dt><strong>계약방식</strong><br class="pc-only" /><em class="txt-rendering">(검토 후 진행)</em></dt>
 								<dd>
-									<div class="form-wrap">
+									<div class="form-wrap col-2">
 										<span>
 											<input id="contract_01" name="contract" type="radio" checked>
 											<label for="contract_01"><em class="txt-rendering">위플즈와 계약</em></label>
@@ -178,11 +182,11 @@
 								<dt><strong>프로젝트 기간</strong></dt>
 								<dd>
 									<span class="text-wrap half">
-										<input type="text" class="txt-rendering" id="" value="" placeholder="날짜를 선택하세요" title="프로젝트 기간(시작) - 날짜를 선택하세요">
+										<input type="text" class="datePick startDate txt-rendering" id="" value="" placeholder="날짜를 선택하세요" title="프로젝트 기간(시작) - 날짜를 선택하세요">
 									</span>
-									<span class="etc">-</span>
+									<span class="etc"></span>
 									<span class="text-wrap half">
-										<input type="text" class="txt-rendering" id="" value="" placeholder="날짜를 선택하세요" title="프로젝트 기간(종료) - 날짜를 선택하세요">
+										<input type="text" class="datePick endDate txt-rendering" id="" value="" placeholder="날짜를 선택하세요" title="프로젝트 기간(종료) - 날짜를 선택하세요">
 									</span>
 								</dd>
 							</dl>
@@ -193,7 +197,7 @@
 									<span class="text-wrap half">
 										<input type="text" id="" class="datePick startDate txt-rendering" value="" placeholder="날짜를 선택하세요" title="접수기간(시작) - 날짜를 선택하세요">
 									</span>
-									<span class="etc">-</span>
+									<span class="etc"></span>
 									<span class="text-wrap half">
 										<input type="text" id="" class="datePick endDate txt-rendering" value="" placeholder="날짜를 선택하세요" title="접수기간(종료) - 날짜를 선택하세요">
 									</span>
@@ -216,7 +220,7 @@
 											<span class="text-wrap half unit">
 												<input type="text" class="txt-rendering" id="" value="" title="프로젝트 예산 최저금액">
 											</span>
-											<span class="etc">-</span>
+											<span class="etc"></span>
 											<span class="text-wrap half unit">
 												<input type="text" class="txt-rendering" id="" value="" title="프로젝트 예산 최고금액">
 											</span>	
@@ -238,13 +242,13 @@
 								<dd>
 									<div class="recruitment dropDown">
 										<div>
-											<div class="form-wrap task">
+											<div class="form-wrap inline task">
 												<span>
 													<input id="task01" name="" type="checkbox" checked>
 													<label for="task01"><em class="txt-rendering">프로그램 개발</em></label>
 												</span>
 											</div>
-											<div>
+											<div class="pc-only-inline">
 												<span class="select-wrap">
 													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
 													<select id="prj">
@@ -265,6 +269,25 @@
 											</div>
 										</div>
 										<div class="skill dropDown-list">
+											<div class="mob-only">
+												<span class="select-wrap">
+													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
+													<select id="prj">
+														<option value="">0</option>
+														<option value="">1</option>
+														<option value="">2</option>
+														<option value="">3</option>
+														<option value="">4</option>
+														<option value="">5</option>
+														<option value="">6</option>
+														<option value="">7</option>
+														<option value="">8</option>
+														<option value="">9</option>
+														<option value="">10</option>
+													</select>
+												</span>
+												<span class="txt-rendering">명</span>
+											</div>
 											<div class="table">
 												<strong class="txt-rendering">필요기술</strong>
 												<div class="chk-wrap">
@@ -295,13 +318,13 @@
 
 									<div class="recruitment dropDown">
 										<div>
-											<div class="form-wrap task">
+											<div class="form-wrap inline task">
 												<span>
 													<input id="task02" name="" type="checkbox">
 													<label for="task02"><em class="txt-rendering">디자인</em></label>
 												</span>
 											</div>
-											<div>
+											<div class="pc-only-inline">
 												<span class="select-wrap">
 													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
 													<select id="prj">
@@ -322,6 +345,25 @@
 											</div>
 										</div>
 										<div class="skill dropDown-list">
+											<div class="mob-only">
+												<span class="select-wrap">
+													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
+													<select id="prj">
+														<option value="">0</option>
+														<option value="">1</option>
+														<option value="">2</option>
+														<option value="">3</option>
+														<option value="">4</option>
+														<option value="">5</option>
+														<option value="">6</option>
+														<option value="">7</option>
+														<option value="">8</option>
+														<option value="">9</option>
+														<option value="">10</option>
+													</select>
+												</span>
+												<span class="txt-rendering">명</span>
+											</div>
 											<div class="table">
 												<strong class="txt-rendering">필요기술</strong>
 												<div class="chk-wrap">
@@ -352,13 +394,13 @@
 
 									<div class="recruitment dropDown">
 										<div>
-											<div class="form-wrap task">
+											<div class="form-wrap inline task">
 												<span>
 													<input id="task03" name="" type="checkbox">
 													<label for="task03"><em class="txt-rendering">퍼블리싱</em></label>
 												</span>
 											</div>
-											<div>
+											<div class="pc-only-inline">
 												<span class="select-wrap">
 													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
 													<select id="prj">
@@ -379,6 +421,25 @@
 											</div>
 										</div>
 										<div class="skill dropDown-list">
+											<div class="mob-only">
+												<span class="select-wrap">
+													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
+													<select id="prj">
+														<option value="">0</option>
+														<option value="">1</option>
+														<option value="">2</option>
+														<option value="">3</option>
+														<option value="">4</option>
+														<option value="">5</option>
+														<option value="">6</option>
+														<option value="">7</option>
+														<option value="">8</option>
+														<option value="">9</option>
+														<option value="">10</option>
+													</select>
+												</span>
+												<span class="txt-rendering">명</span>
+											</div>
 											<div class="table">
 												<strong class="txt-rendering">필요기술</strong>
 												<div class="chk-wrap">
@@ -409,13 +470,13 @@
 
 									<div class="recruitment dropDown">
 										<div>
-											<div class="form-wrap task">
+											<div class="form-wrap inline task">
 												<span>
 													<input id="task04" name="" type="checkbox">
 													<label for="task04"><em class="txt-rendering">기획</em></label>
 												</span>
 											</div>
-											<div>
+											<div class="pc-only-inline">
 												<span class="select-wrap">
 													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
 													<select id="prj">
@@ -436,6 +497,25 @@
 											</div>
 										</div>
 										<div class="skill dropDown-list">
+											<div class="mob-only">
+												<span class="select-wrap">
+													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
+													<select id="prj">
+														<option value="">0</option>
+														<option value="">1</option>
+														<option value="">2</option>
+														<option value="">3</option>
+														<option value="">4</option>
+														<option value="">5</option>
+														<option value="">6</option>
+														<option value="">7</option>
+														<option value="">8</option>
+														<option value="">9</option>
+														<option value="">10</option>
+													</select>
+												</span>
+												<span class="txt-rendering">명</span>
+											</div>
 											<div class="table">
 												<strong class="txt-rendering">필요기술</strong>
 												<div class="chk-wrap">
@@ -466,13 +546,13 @@
 
 									<div class="recruitment dropDown">
 										<div>
-											<div class="form-wrap task">
+											<div class="form-wrap inline task">
 												<span>
 													<input id="task05" name="" type="checkbox">
 													<label for="task05"><em class="txt-rendering">PM</em></label>
 												</span>
 											</div>
-											<div>
+											<div class="pc-only-inline">
 												<span class="select-wrap">
 													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
 													<select id="prj">
@@ -493,6 +573,25 @@
 											</div>
 										</div>
 										<div class="skill dropDown-list">
+											<div class="mob-only">
+												<span class="select-wrap">
+													<label for="prj"><em class="hidden-txt">모집 인원</em></label>
+													<select id="prj">
+														<option value="">0</option>
+														<option value="">1</option>
+														<option value="">2</option>
+														<option value="">3</option>
+														<option value="">4</option>
+														<option value="">5</option>
+														<option value="">6</option>
+														<option value="">7</option>
+														<option value="">8</option>
+														<option value="">9</option>
+														<option value="">10</option>
+													</select>
+												</span>
+												<span class="txt-rendering">명</span>
+											</div>
 											<div class="table">
 												<strong class="txt-rendering">필요기술</strong>
 												<div class="chk-wrap">
@@ -526,7 +625,7 @@
 							<dl class="table">
 								<dt><strong>근무형태</strong></dt>
 								<dd>
-									<div class="form-wrap">
+									<div class="form-wrap col-2">
 										<span>
 											<input id="work_type01" name="work_type" type="radio">
 											<label for="work_type01"><em class="txt-rendering">도급(비상주)</em></label>
@@ -588,7 +687,7 @@
 								<dt><strong>프로젝트 개요</strong></dt>
 								<dd>
 									<div class="form-txt-wrap">
-										<textarea name="" id="" placeholder="2,000자 이내로 입력해주세요"></textarea>
+										<textarea name="" id="" placeholder="2,000자 이내로 입력해주세요" title="프로젝트 개요 - 2,000자 이내로 입력해주세요"></textarea>
 										<span><em class="txt-rendering">0</em>&nbsp;&#47;&nbsp;<em class="maxLength txt-rendering">2,000</em></span>
 									</div>
 								</dd>
@@ -598,13 +697,13 @@
 								<dt><strong>수행업무 상세</strong></dt>
 								<dd>
 									<div class="form-txt-wrap">
-										<textarea name="" id="" placeholder="2,000자 이내로 입력해주세요"></textarea>
+										<textarea name="" id="" placeholder="2,000자 이내로 입력해주세요" title="수행업무 상세 - 2,000자 이내로 입력해주세요"></textarea>
 										<span><em class="txt-rendering">0</em>&nbsp;&#47;&nbsp;<em class="maxLength txt-rendering">2,000</em></span>
 									</div>
 								</dd>
 							</dl>
 
-							<div class="btn-wrap align-c">
+							<div class="btn-wrap align-c col-mid-2-2">
 								<button type="submit" class="btn-type-lg purple"><em class="txt-rendering ft-md">등록하기</em></button>
 								<button type="button" class="btn-type-mid"><em class="txt-rendering ft-md">취소</em></button>
 							</div>
